[tool.poetry]
name = "person-item-color"
version = "0.1.0"
description = ""
authors = ["Pablo Emidio <p.emidiodev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
SQLAlchemy = "^1.4.23"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
